force-app/main/default/objects/MaxOrderLine__c/MaxOrderLine__c.object-meta.xml
<CustomObject>
    <label>MaxOrderLine</label>
    <nameField>
        <displayFormat>MaxOrdLine {0000}</displayFormat>
        <label>Max Order Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MaxOrderLines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>