force-app/main/default/objects/MaxOrderLine__c/fields/ActivationEndTime__c.field-meta.xml
<CustomField>
    <fullName>ActivationEndTime__c</fullName>
    <formula>ActivationStart__c + ( (ActivationReadyCount__c*1) /1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation End Time Estimate</label>
    <type>DateTime</type>
</CustomField>