force-app/main/default/objects/MaxOrderLine__c/fields/ActivationMessage__c.field-meta.xml
<CustomField>
    <fullName>ActivationMessage__c</fullName>
    <label>Activation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>