force-app/main/default/objects/MaxOrderLine__c/fields/ActivationProblem__c.field-meta.xml
<CustomField>
    <fullName>ActivationProblem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activation Problem</label>
    <type>Checkbox</type>
</CustomField>