force-app/main/default/objects/MaxOrderLine__c/fields/ActivationReadyCount__c.field-meta.xml
<CustomField>
    <fullName>ActivationReadyCount__c</fullName>
    <label>Activation Ready Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>