force-app/main/default/objects/MaxOrderLine__c/fields/ActivationStart__c.field-meta.xml
<CustomField>
    <fullName>ActivationStart__c</fullName>
    <label>Activation Start</label>
    <type>DateTime</type>
</CustomField>