force-app/main/default/objects/MaxOrderLine__c/fields/AllOrdersActivated__c.field-meta.xml
<CustomField>
    <fullName>AllOrdersActivated__c</fullName>
    <formula>if( AND(ActivationReadyCount__c = OrdersActivated__c,  ExpectedActivationCount__c  = OrdersActivated__c),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Orders Activated</label>
    <type>Checkbox</type>
</CustomField>