force-app/main/default/objects/MaxOrderLine__c/fields/CheckActivationProcessing__c.field-meta.xml
<CustomField>
    <fullName>CheckActivationProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Activation Processing</label>
    <type>Checkbox</type>
</CustomField>