force-app/main/default/objects/MaxOrderLine__c/fields/ExpectedActivationCount__c.field-meta.xml
<CustomField>
    <fullName>ExpectedActivationCount__c</fullName>
    <label>Expected Activation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>