force-app/main/default/objects/MaxOrderLine__c/fields/OrdersActivated__c.field-meta.xml
<CustomField>
    <fullName>OrdersActivated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Orders Activated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>