force-app/main/default/objects/MaxOrderLine__c/fields/RelatedOrderActivationready__c.field-meta.xml
<CustomField>
    <fullName>RelatedOrderActivationready__c</fullName>
    <formula>IF(AND(ExpectedActivationCount__c &gt;0,ActivationReadyCount__c&gt;0,ExpectedActivationCount__c=ActivationReadyCount__c), True, False)</formula>
    <label>Related Order Activation ready</label>
    <type>Checkbox</type>
</CustomField>