force-app/main/default/objects/MaxOrderLine__c/fields/TriggerBusinessRules__c.field-meta.xml
<CustomField>
    <fullName>TriggerBusinessRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Business Rules</label>
    <type>Checkbox</type>
</CustomField>